--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
   "author": "Mike Timashov",
   "license": "ISC",
   "dependencies": {
+    "@coral-xyz/anchor": "^0.29.0",
+    "@project-serum/serum": "^0.13.65",
+    "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
+    "@solana/spl-token": "^0.4.6",
+    "@solana/web3.js": "1.95.2",
+    "@triton-one/yellowstone-grpc": "^0.5.0",
     "axios": "^0.21.0",
     "bn.js": "^5.2.1",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
+    "decimal.js": "^10.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
@@ -27,14 +34,19 @@
     "express-validator": "^6.8.0",
     "fs": "0.0.1-security",
     "grammy": "^1.24.0",
+    "helius-sdk": "^1.3.5",
+    "jito-ts": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
     "nanoid": "^5.0.4",
     "node-cron": "^3.0.0",
-    "reflect-metadata": "^0.1.10"
+    "reflect-metadata": "^0.1.10",
+    "rpc-websockets": "7.11.0",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.5",
     "@types/bs58": "^4.0.4",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.9",
