--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "heymike-notifications-telegram-bot",
+  "name": "nova",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
@@ -17,7 +17,6 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@project-serum/serum": "^0.13.65",
-    "@raydium-io/raydium-sdk": "^1.3.1-beta.58",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "1.95.2",
     "@triton-one/yellowstone-grpc": "^0.6.0",
@@ -61,6 +60,6 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": "20.5.1"
+    "node": "20.17.0"
   }
 }
