--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@project-serum/serum": "^0.13.65",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "1.95.2",
+    "@solanafm/explorer-kit": "^1.1.3",
+    "@solanafm/explorer-kit-idls": "^1.1.3",
     "@triton-one/yellowstone-grpc": "^0.6.0",
     "axios": "^0.21.0",
     "bn.js": "^5.2.1",
