--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Mike Timashov",
   "license": "ISC",
   "dependencies": {
+    "@bonfida/spl-name-service": "^3.0.3",
     "@coral-xyz/anchor": "^0.29.0",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
