--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@bonfida/spl-name-service": "^3.0.3",
     "@coral-xyz/anchor": "^0.29.0",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.4",
+    "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@project-serum/serum": "^0.13.65",
+    "@solana/spl-account-compression": "^0.4.1",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "1.95.2",
     "@solanafm/explorer-kit": "^1.1.3",
