auto-retry plugin

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@bonfida/spl-name-service": "^3.0.3",
     "@coral-xyz/anchor": "^0.29.0",
+    "@grammyjs/auto-retry": "^2.0.2",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.4",
     "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
