--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "node-cron": "^3.0.0",
     "reflect-metadata": "^0.1.10",
     "rpc-websockets": "7.11.0",
+    "twilio": "^5.3.6",
     "ws": "^8.17.0"
   },
   "devDependencies": {
