--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@project-serum/serum": "^0.13.65",
+    "@revenuecat/purchases-capacitor": "^9.0.7",
     "@solana/spl-account-compression": "^0.4.1",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "1.95.4",
