--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grammy": "^1.30.0",
     "helius-sdk": "^1.3.5",
     "jsonwebtoken": "^8.5.1",
+    "mixpanel": "^0.18.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.3",
     "nanoid": "^5.0.4",
