--- a/package.json
+++ b/package.json
@@ -15,41 +15,39 @@
   "author": "Mike Timashov",
   "license": "ISC",
   "dependencies": {
-    "@apple/app-store-server-library": "^1.4.0",
     "@bonfida/spl-name-service": "^3.0.3",
     "@coral-xyz/anchor": "^0.29.0",
     "@grammyjs/auto-retry": "^2.0.2",
+    "@jup-ag/api": "^6.0.32",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.4",
     "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.2.1",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
-    "@project-serum/serum": "^0.13.65",
     "@solana/addresses": "^2.0.0",
-    "@solana/spl-account-compression": "^0.4.1",
     "@solana/spl-token": "^0.4.6",
     "@solana/web3.js": "1.95.4",
     "@solanafm/explorer-kit": "^1.1.3",
     "@solanafm/explorer-kit-idls": "^1.1.3",
-    "@triton-one/yellowstone-grpc": "^0.6.0",
+    "@triton-one/yellowstone-grpc": "^1.4.1",
     "axios": "^0.21.0",
     "bn.js": "^5.2.1",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
     "decimal.js": "^10.4.3",
     "dotenv": "^16.0.3",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "express-form-data": "^2.0.17",
     "express-jwt": "^6.0.0",
     "express-validator": "^6.8.0",
-    "firebase-admin": "^12.6.0",
+    "firebase-admin": "^13.0.2",
     "fs": "0.0.1-security",
     "grammy": "^1.30.0",
-    "helius-sdk": "^1.3.5",
+    "helius-sdk": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.18.0",
-    "mongoose": "^8.7.0",
+    "mongoose": "^8.9.3",
     "multer": "^1.4.3",
     "nanoid": "^5.0.4",
     "node-cron": "^3.0.0",
