--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "multer": "^1.4.3",
     "nanoid": "^5.0.4",
     "node-cron": "^3.0.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.1.10",
     "rpc-websockets": "7.11.0",
     "twilio": "^5.3.6",
