--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "tsc",
     "start": "node build/index.js",
     "build-prod": "npm install && rimraf ./build && tsc",
-    "start-dev": "NODE_ENV=DEVELOPMENT ts-node-dev src/index.ts",
-    "start-dev-test": "NODE_ENV=DEVELOPMENT TEST=TRUE ts-node-dev src/index.ts",
-    "start-prod": "NODE_ENV=PRODUCTION ts-node-dev src/index.ts"
+    "start-dev": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
+    "start-dev-test": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true TEST=TRUE ts-node-dev src/index.ts",
+    "start-prod": "NODE_ENV=PRODUCTION IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
+    "download-solscan-labels": "wget https://raw.githubusercontent.com/solscanofficial/labels/refs/heads/main/labels.json -O files/solscan-labels.json"
   },
   "type": "commonjs",
   "keywords": [],
