--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/index.js",
-    "build-prod": "npm install && rimraf ./build && tsc",
+    "build-prod": "npm install && rimraf ./build && npm run download-solscan-labels && tsc",
     "start-dev": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
     "start-dev-test": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true TEST=TRUE ts-node-dev src/index.ts",
     "start-prod": "NODE_ENV=PRODUCTION IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
-    "download-solscan-labels": "wget https://raw.githubusercontent.com/solscanofficial/labels/refs/heads/main/labels.json -O files/solscan-labels.json"
+    "download-solscan-labels": "wget https://raw.githubusercontent.com/solscanofficial/labels/refs/heads/main/labels.json -O src/files/solscan-labels.json"
   },
   "type": "commonjs",
   "keywords": [],
