--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node build/index.js",
     "build-prod-on-server": "npm install && rimraf ./build && tsc",
     "build-prod": "npm install && rimraf ./build && npm run download-solscan-labels && tsc",
-    "start-dev": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
+    "start-dev": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true IS_TELEGRAM_PROCESS=true ts-node-dev src/index.ts",
     "start-dev-test": "NODE_ENV=DEVELOPMENT IS_MAIN_PROCESS=true TEST=TRUE ts-node-dev src/index.ts",
     "start-prod": "NODE_ENV=PRODUCTION IS_MAIN_PROCESS=true ts-node-dev src/index.ts",
     "download-solscan-labels": "wget https://raw.githubusercontent.com/solscanofficial/labels/refs/heads/main/labels.json -O src/files/solscan-labels.json"
