--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@grammyjs/auto-retry": "^2.0.2",
     "@jup-ag/api": "^6.0.40",
-    "@metaplex-foundation/digital-asset-standard-api": "^1.0.5",
+    "@metaplex-foundation/digital-asset-standard-api": "^1.0.6",
     "@metaplex-foundation/mpl-bubblegum": "^4.3.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
-    "@metaplex-foundation/umi": "^1.0.0",
-    "@metaplex-foundation/umi-bundle-defaults": "^1.0.0",
+    "@metaplex-foundation/mpl-toolbox": "^0.10.0",
+    "@metaplex-foundation/umi": "^1.1.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^1.1.1",
+    "@solana/kit": "^2.1.0",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "1.98.0",
     "@solanafm/explorer-kit": "^1.2.0",
