--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@bonfida/spl-name-service": "^3.0.9",
     "@coral-xyz/anchor": "^0.30.1",
     "@grammyjs/auto-retry": "^2.0.2",
-    "@jup-ag/api": "^6.0.40",
+    "@jup-ag/api": "github:heymike777/jupiter-quote-api-node",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.6",
     "@metaplex-foundation/mpl-bubblegum": "^4.3.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
