--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@metaplex-foundation/mpl-toolbox": "^0.10.0",
     "@metaplex-foundation/umi": "^1.1.1",
     "@metaplex-foundation/umi-bundle-defaults": "^1.1.1",
+    "@raydium-io/raydium-sdk-v2": "^0.1.117-alpha",
     "@solana/kit": "^2.1.0",
     "@solana/spl-token": "^0.4.12",
     "@solana/web3.js": "1.98.0",
