--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "fs": "0.0.1-security",
     "grammy": "^1.30.0",
     "helius-sdk": "^1.4.2",
+    "jito-ts": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.18.0",
     "mongoose": "^8.9.3",
