--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@grammyjs/auto-retry": "^2.0.2",
     "@grammyjs/ratelimiter": "^1.2.1",
+    "@grammyjs/runner": "^2.0.3",
+    "@grammyjs/transformer-throttler": "^1.2.1",
     "@heymike/sega-sdk": "^0.1.0-alpha-2",
     "@jup-ag/api": "github:heymike777/jupiter-quote-api-node",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.6",
