--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@solanafm/explorer-kit": "^1.2.0",
     "@solanafm/explorer-kit-idls": "^1.1.4",
     "@triton-one/yellowstone-grpc": "^3.0.0",
+    "@types/amqplib": "^0.10.7",
+    "amqplib": "^0.10.8",
     "axios": "^0.21.0",
     "bn.js": "^5.2.1",
     "bs58": "^4.0.1",
