--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@grammyjs/runner": "^2.0.3",
     "@grammyjs/transformer-throttler": "^1.2.1",
     "@heymike/sega-sdk": "^0.1.0-alpha-2",
-    "@jup-ag/api": "github:heymike777/jupiter-quote-api-node",
+    "@jup-ag/api": "^6.0.41",
     "@metaplex-foundation/digital-asset-standard-api": "^1.0.6",
     "@metaplex-foundation/mpl-bubblegum": "^4.3.1",
     "@metaplex-foundation/mpl-token-metadata": "^3.4.0",
@@ -35,7 +35,7 @@
     "@raydium-io/raydium-sdk-v2": "^0.1.118-alpha",
     "@solana/kit": "^2.1.0",
     "@solana/spl-token": "^0.4.12",
-    "@solana/web3.js": "1.98.0",
+    "@solana/web3.js": "1.98.2",
     "@solanafm/explorer-kit": "^1.2.0",
     "@solanafm/explorer-kit-idls": "^1.1.4",
     "@triton-one/yellowstone-grpc": "^3.0.0",
