--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "mongoose": "^8.9.3",
     "multer": "^1.4.3",
     "node-cron": "^3.0.0",
+    "rabbitmq-stream-js-client": "^0.6.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.1.10",
     "rpc-websockets": "7.11.0",
