--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "reflect-metadata": "^0.1.10",
     "rpc-websockets": "7.11.0",
     "twilio": "^5.3.6",
+    "winston": "^3.17.0",
     "ws": "^8.17.0"
   },
   "devDependencies": {
