--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nova",
+  "name": "light",
   "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
@@ -41,7 +41,7 @@
     "@triton-one/yellowstone-grpc": "^3.0.0",
     "@types/amqplib": "^0.10.7",
     "amqplib": "^0.10.8",
-    "axios": "^0.21.0",
+    "axios": "^1.9.0",
     "bn.js": "^5.2.1",
     "bs58": "^4.0.1",
     "cors": "^2.8.5",
@@ -59,7 +59,7 @@
     "jito-ts": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mixpanel": "^0.18.0",
-    "mongoose": "^8.9.3",
+    "mongoose": "^8.15.0",
     "multer": "^1.4.3",
     "node-cron": "^3.0.0",
     "rabbitmq-stream-js-client": "^0.6.0",
