--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@grammyjs/ratelimiter": "^1.2.1",
     "@grammyjs/runner": "^2.0.3",
     "@grammyjs/transformer-throttler": "^1.2.1",
-    "@heymike/sega-sdk": "^0.1.0-alpha-2",
     "@jup-ag/api": "^6.0.41",
     "@metaplex-foundation/digital-asset-standard-api": "^2.0.0",
     "@metaplex-foundation/mpl-bubblegum": "^5.0.1",
@@ -33,6 +32,7 @@
     "@metaplex-foundation/umi": "^1.1.1",
     "@metaplex-foundation/umi-bundle-defaults": "^1.1.1",
     "@raydium-io/raydium-sdk-v2": "^0.1.135-alpha",
+    "@sega-so/sega-sdk": "^0.1.3",
     "@solana/kit": "^2.1.1",
     "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "1.98.2",
