--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@grammyjs/ratelimiter": "^1.2.1",
     "@grammyjs/runner": "^2.0.3",
     "@grammyjs/transformer-throttler": "^1.2.1",
+    "@heymike/chaosfinance": "^1.0.38",
     "@jup-ag/api": "^6.0.41",
     "@metaplex-foundation/digital-asset-standard-api": "^2.0.0",
     "@metaplex-foundation/mpl-bubblegum": "^5.0.1",
